--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.5.1
   location: ^5.0.0
   flutter_polyline_points: ^2.0.0
+  lottie: ^2.7.0
+  flutter_spinkit: ^5.2.0
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
   http: ^1.1.0
+  flutter_riverpod: ^2.4.9
+  animate_do: ^3.1.2
 
 dev_dependencies:
   flutter_test:
