--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,19 @@ dependencies:
   http: ^1.1.0
   flutter_riverpod: ^2.4.9
   animate_do: ^3.1.2
+  path_provider: ^2.0.1
+  url_launcher: ^6.2.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
