--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   animate_do: ^3.1.2
   path_provider: ^2.0.1
   url_launcher: ^6.2.3
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
 
 
 dev_dependencies:
