--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^2.5.1
+
   location: ^5.0.0
-  flutter_polyline_points: ^2.0.0
-  lottie: ^2.7.0
-  flutter_spinkit: ^5.2.0
+
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^1.1.0
+  http: ^0.13.6
   flutter_riverpod: ^2.4.9
   animate_do: ^3.1.2
   path_provider: ^2.0.1
@@ -47,6 +47,13 @@ dependencies:
   firebase_auth: ^4.16.0
   chat_gpt_sdk: ^2.2.5
   speech_to_text: ^6.5.1
+  google_maps_flutter: ^2.5.1
+  flutter_polyline_points: ^1.0.0
+  flutter_spinkit: ^5.2.0
+  geocoding: ^2.1.1
+  geolocator: ^10.1.0
+  flutter_speed_dial: ^7.0.0
+  search_map_place_updated: ^0.0.4
 
 
 dev_dependencies:
