--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   geolocator: ^10.1.0
   flutter_speed_dial: ^7.0.0
   search_map_place_updated: ^0.0.4
+  flutter_tts: ^3.8.5
 
 
 dev_dependencies:
